<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserProfile"
    android:padding="8dp">

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/adduser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/hello_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_icon"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_icon">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hello."
            android:textColor="?attr/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letsGetStarted"
            android:textColor="?attr/colorPrimary"
            android:textSize="38sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/hello_text">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintConfirmPassword"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/btnCreateAccount"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:iconGravity="textStart"
            android:layout_marginTop="12dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/form_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAlreadyLogin"
            android:textColor="?attr/colorSecondary" />
        <Space
            android:layout_width="6dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogin"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>