<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/baseline_lock_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/forgotPassword"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimary"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordInfo"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp">

            <ProgressBar
                android:id="@+id/forgetPasswordProgressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/resetPassword"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_lock_reset_24"
                app:iconGravity="textStart" />

        </FrameLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/back"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconGravity="textStart" />


    </LinearLayout>

</ScrollView>