<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/colorPrimaryContainer"
    android:clickable="true"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    android:focusable="true"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="6dp"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/baseline_brightness_1_24"
                    android:contentDescription="dot"
                    android:layout_gravity="center_vertical"/>


                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_marginStart="12dp"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp">
                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateFormat"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"
                    android:textColor="?attr/colorSecondary"/>
            </LinearLayout>
        </LinearLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoteContent"
            android:text="@string/content"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="18sp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="38dp"
            android:textColor="?attr/colorOnPrimaryContainer"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoteTimestamp"
            android:text="@string/time"
            android:textSize="12sp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/background_for_timestamp"
            android:padding="4dp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginStart="38dp"
            />
    </LinearLayout>



</androidx.cardview.widget.CardView>